# app/servicerequest/registry.go
@@ -1,4 +1,4 @@
-package company
+package servicerequest
 
 import (
 	"github.com/gin-gonic/gin"
@@ -14,8 +14,6 @@ func (r Registry) Name() string {
 
 func (r Registry) ServicesDefinition(c *dig.Container) {
 	core.PanicOnError(c.Provide(NewController, dig.As(new(ControllerInterface))))
-	core.PanicOnError(c.Provide(NewFactory, dig.As(new(FactoryInterface))))
-	core.PanicOnError(c.Provide(NewService, dig.As(new(ServiceInterface))))
 }
 
 func (r Registry) ApiRouteDefinitions() []core.ApiRouteDefinition {
@@ -25,12 +23,13 @@ func (r Registry) ApiRouteDefinitions() []core.ApiRouteDefinition {
 		}))
 		return ctrl
 	}
+
 	return []core.ApiRouteDefinition{
 		{
 			Method: core.GET,
-			Path:   "/companies",
+			Path:   "/services",
 			Handler: func(ctx *gin.Context, c *dig.Container) {
-				controller(c).FindAllCompanies(ctx)
+				controller(c).FindAllServices(ctx)
 			},
 		},
 	}
