# app/servicerequest/servicerequest.go
@@ -1,0 +1,6 @@
+package servicerequest
+
+type ServiceRequest struct {
+	ID   string `json:"id"`
+	Name string `json:"name"`
+}
