# app/user/dto.go
@@ -1,0 +1,6 @@
+package user
+
+type UserCreate struct {
+	FirstName string `json:"first_name"`
+	LastName  string `json:"last_name"`
+}
